lib_LTLIBRARIES = libXmippData_@host_os@.la

libXmippData_@host_os@_la_SOURCES = Src/NumericalRecipes.cc Src/xmippFuncs.cc Src/xmippArgs.cc \
	Src/xmippMatrices1D.cc Src/xmippMatrices2D.cc \
	Src/xmippMatrices3D.cc Src/xmippSelFiles.cc Src/xmippHistograms.cc \
	Src/xmippHeader.cc Src/xmippImages.cc Src/xmippVolumes.cc \
	Src/xmippDocFiles.cc Src/xmippGeometry.cc Src/xmippProjection.cc \
	Src/xmippProgs.cc Src/xmippMasks.cc Src/xmippMicrograph.cc \
	Src/xmippFilters.cc Src/xmippMorphology.cc \
	Src/xmippRotationalSpectrum.cc \
	Programs/Src/Prog_downsample.cc Programs/Src/Prog_segment.cc \
	Programs/Src/Prog_denoising.cc \
	Programs/Src/Prog_test_cluster.cc \
	Programs/Src/Prog_normalize.cc \
	Programs/Src/Prog_range_adjust.cc \
	Programs/Src/Prog_make_spectra.cc \
	Src/xmippWavelets.cc \
	Src/xmippImagic.cc \
	Src/xmippFFT.cc \
	Src/xmippTomogram.cc \
	Bilib/sources/changebasis.cc \
	Bilib/sources/convert.cc \
	Bilib/sources/dft.cc \
	Bilib/sources/dht.cc \
	Bilib/sources/findroot.cc \
	Bilib/sources/firconvolve.cc \
	Bilib/sources/flip.cc \
	Bilib/sources/fold.cc \
	Bilib/sources/fourierconvolve.cc \
	Bilib/sources/geometry.cc \
	Bilib/sources/getpoles.cc \
	Bilib/sources/getput.cc \
	Bilib/sources/getputd.cc \
	Bilib/sources/gradient.cc \
	Bilib/sources/histogram.cc \
	Bilib/sources/iirconvolve.cc \
	Bilib/sources/interpolate.cc \
	Bilib/sources/kernel.cc \
	Bilib/sources/kerneldiff1.cc \
	Bilib/sources/kerneldiff2.cc \
	Bilib/sources/kerneldiff.cc \
	Bilib/sources/kernelintegrate.cc \
	Bilib/sources/linearalgebra.cc \
	Bilib/sources/minmax.cc \
	Bilib/sources/morphology.cc \
	Bilib/sources/movingaverage.cc \
	Bilib/sources/polynomial.cc \
	Bilib/sources/positivepower.cc \
	Bilib/sources/pyramidfilters.cc \
	Bilib/sources/pyramidtools.cc \
	Bilib/sources/round.cc \
	Bilib/sources/swap.cc \
	Bilib/sources/timestamp.cc \
	Bilib/sources/traceline.cc \
	Bilib/sources/window.cc \
	Bilib/sources/messagedisplay.cc \
	Bilib/sources/wavelet.cc \
	Bilib/sources/waveletfiltersfract.cc \
	Bilib/sources/waveletfilters.cc \
	Bilib/sources/wavelettools.cc 	
		
INCLUDES = -I$(top_srcdir)/Lib \
	-I$(top_srcdir)/Lib/XmippData/Bilib/headers \
	-I$(top_srcdir)/Lib/XmippData/Bilib/types \
	-I$(top_srcdir)/Lib/XmippData/Bilib
