lib_LTLIBRARIES = libXmippData.la

libXmippData_la_SOURCES = \
	args.cpp \
	del_triang.cpp \
	denoise.cpp \
	de_solver.cpp \
	docfile.cpp \
	fft.cpp \
	filters.cpp \
	funcs.cpp \
	geometry.cpp \
	header.cpp \
	histogram.cpp \
	image.cpp \
	imagic.cpp \
	integration.cpp \
	make_spectra.cpp \
	mask.cpp \
	matrix1d.cpp \
	matrix2d.cpp \
	matrix3d.cpp \
	micrograph.cpp \
	micrograph_downsample.cpp \
	morphology.cpp \
	normalize.cpp \
	numerical_recipes.cpp \
	progs.cpp \
	projection.cpp \
	range_adjust.cpp \
	rotational_spectrum.cpp \
	selfile.cpp \
	test_cluster.cpp \
	tomogram.cpp \
	volume.cpp \
	volume_segment.cpp \
	wavelet.cpp \
	$(top_srcdir)/external/bilib/sources/changebasis.cc \
	$(top_srcdir)/external/bilib/sources/convert.cc \
	$(top_srcdir)/external/bilib/sources/dft.cc \
	$(top_srcdir)/external/bilib/sources/dht.cc \
	$(top_srcdir)/external/bilib/sources/findroot.cc \
	$(top_srcdir)/external/bilib/sources/firconvolve.cc \
	$(top_srcdir)/external/bilib/sources/flip.cc \
	$(top_srcdir)/external/bilib/sources/fold.cc \
	$(top_srcdir)/external/bilib/sources/fourierconvolve.cc \
	$(top_srcdir)/external/bilib/sources/geometry.cc \
	$(top_srcdir)/external/bilib/sources/getpoles.cc \
	$(top_srcdir)/external/bilib/sources/getput.cc \
	$(top_srcdir)/external/bilib/sources/getputd.cc \
	$(top_srcdir)/external/bilib/sources/gradient.cc \
	$(top_srcdir)/external/bilib/sources/histogram.cc \
	$(top_srcdir)/external/bilib/sources/iirconvolve.cc \
	$(top_srcdir)/external/bilib/sources/interpolate.cc \
	$(top_srcdir)/external/bilib/sources/kernel.cc \
	$(top_srcdir)/external/bilib/sources/kerneldiff1.cc \
	$(top_srcdir)/external/bilib/sources/kerneldiff2.cc \
	$(top_srcdir)/external/bilib/sources/kerneldiff.cc \
	$(top_srcdir)/external/bilib/sources/kernelintegrate.cc \
	$(top_srcdir)/external/bilib/sources/linearalgebra.cc \
	$(top_srcdir)/external/bilib/sources/minmax.cc \
	$(top_srcdir)/external/bilib/sources/morphology.cc \
	$(top_srcdir)/external/bilib/sources/movingaverage.cc \
	$(top_srcdir)/external/bilib/sources/polynomial.cc \
	$(top_srcdir)/external/bilib/sources/positivepower.cc \
	$(top_srcdir)/external/bilib/sources/pyramidfilters.cc \
	$(top_srcdir)/external/bilib/sources/pyramidtools.cc \
	$(top_srcdir)/external/bilib/sources/round.cc \
	$(top_srcdir)/external/bilib/sources/swap.cc \
	$(top_srcdir)/external/bilib/sources/timestamp.cc \
	$(top_srcdir)/external/bilib/sources/traceline.cc \
	$(top_srcdir)/external/bilib/sources/window.cc \
	$(top_srcdir)/external/bilib/sources/messagedisplay.cc \
	$(top_srcdir)/external/bilib/sources/sources/wavelet.cc \
	$(top_srcdir)/external/bilib/sources/waveletfiltersfract.cc \
	$(top_srcdir)/external/bilib/sources/waveletfilters.cc \
	$(top_srcdir)/external/bilib/sources/wavelettools.cc

INCLUDES = \
	-I$(top_srcdir)/libraries \
	-I$(top_srcdir)/external/bilib/headers \
	-I$(top_srcdir)/external/bilib/types \
	-I$(top_srcdir)/external/bilib

EXTRA_DIST = \
	args.h \
	del_triang.h \
	denoise.h \
	de_solver.h \
	docfile.h \
	error.h \
	fft.h \
	filters.h \
	funcs.h \
	geometry.h \
	header.h \
	histogram.h \
	image.h \
	imagic.h \
	integration.h \
	macros.h \
	make_spectra.h \
	mask.h \
	matrix1d.h \
	matrix2d.h \
	matrix3d.h \
	memory.h \
	micrograph_downsample.h \
	micrograph.h \
	morphology.h \
	multidim_basic2.h \
	multidim_basic3.h \
	multidim_basic.h \
	multidim_common.h \
	multidim_friends_implementation.h \
	normalize.h \
	numerical_recipes.h \
	progs.h \
	projection.h \
	range_adjust.h \
	rotational_spectrum.h \
	selfile.h \
	test_cluster.h \
	tomogram.h \
	types.h \
	vectorial.h \
	volume.h \
	volume_segment.h \
	wavelet.h \
	$(top_srcdir)/external/bilib/configs.h \
	$(top_srcdir)/external/bilib/headers/changebasis.h \
	$(top_srcdir)/external/bilib/headers/kerneldiff.h \
	$(top_srcdir)/external/bilib/headers/convert.h \
	$(top_srcdir)/external/bilib/headers/kernel.h \
	$(top_srcdir)/external/bilib/headers/debug.h \
	$(top_srcdir)/external/bilib/headers/kernelintegrate.h \
	$(top_srcdir)/external/bilib/headers/dft.h \
	$(top_srcdir)/external/bilib/headers/linearalgebra.h \
	$(top_srcdir)/external/bilib/headers/dht.h \
	$(top_srcdir)/external/bilib/headers/messagedisplay.h \
	$(top_srcdir)/external/bilib/headers/error.h \
	$(top_srcdir)/external/bilib/headers/minmax.h \
	$(top_srcdir)/external/bilib/headers/findroot.h \
	$(top_srcdir)/external/bilib/headers/morphology.h \
	$(top_srcdir)/external/bilib/headers/firconvolve.h \
	$(top_srcdir)/external/bilib/headers/movingaverage.h \
	$(top_srcdir)/external/bilib/headers/flip.h \
	$(top_srcdir)/external/bilib/headers/polynomial.h \
	$(top_srcdir)/external/bilib/headers/fold.h \
	$(top_srcdir)/external/bilib/headers/positivepower.h \
	$(top_srcdir)/external/bilib/headers/fourierconvolve.h \
	$(top_srcdir)/external/bilib/headers/pyramidfilters.h \
	$(top_srcdir)/external/bilib/headers/geometry.h \
	$(top_srcdir)/external/bilib/headers/pyramidtools.h \
	$(top_srcdir)/external/bilib/headers/getpoles.h \
	$(top_srcdir)/external/bilib/headers/round.h \
	$(top_srcdir)/external/bilib/headers/getputd.h \
	$(top_srcdir)/external/bilib/headers/swap.h \
	$(top_srcdir)/external/bilib/headers/getput.h \
	$(top_srcdir)/external/bilib/headers/timestamp.h \
	$(top_srcdir)/external/bilib/headers/gradient.h \
	$(top_srcdir)/external/bilib/headers/traceline.h \
	$(top_srcdir)/external/bilib/headers/histogram.h \
	$(top_srcdir)/external/bilib/headers/waveletfiltersfract.h \
	$(top_srcdir)/external/bilib/headers/iirconvolve.h \
	$(top_srcdir)/external/bilib/headers/waveletfilters.h \
	$(top_srcdir)/external/bilib/headers/interpolate.h \
	$(top_srcdir)/external/bilib/headers/wavelet.h \
	$(top_srcdir)/external/bilib/headers/kerneldiff1.h \
	$(top_srcdir)/external/bilib/headers/wavelettools.h \
	$(top_srcdir)/external/bilib/headers/kerneldiff2.h \
	$(top_srcdir)/external/bilib/headers/window.h \
	$(top_srcdir)/external/bilib/types/tboundaryconvention.h \
	$(top_srcdir)/external/bilib/types/tsplinebasis.h \
	$(top_srcdir)/external/bilib/types/ttimestamp.h \
	$(top_srcdir)/external/bilib/types/ttraceline.h

docs:
	@echo "Creating documentation in XmippData ..."
	@doc++ -f -B @XMIPPDIR@/Extra_Docs/banner.html -d Docs documentation
