lib_LTLIBRARIES = libXmippData.la

libXmippData_la_SOURCES = \
	args.cpp \
	del_triang.cpp \
	denoise.cpp \
	de_solver.cpp \
	docfile.cpp \
	fft.cpp \
	filters.cpp \
	funcs.cpp \
	geometry.cpp \
	header.cpp \
	histogram.cpp \
	image.cpp \
	integration.cpp \
	make_spectra.cpp \
	mask.cpp \
	matrix1d.cpp \
	matrix2d.cpp \
	matrix3d.cpp \
	micrograph.cpp \
	micrograph_downsample.cpp \
	morphology.cpp \
	normalize.cpp \
	numerical_recipes.cpp \
	progs.cpp \
	projection.cpp \
	range_adjust.cpp \
	rotational_spectrum.cpp \
	selfile.cpp \
	test_cluster.cpp \
	tomogram.cpp \
	volume.cpp \
	volume_segment.cpp \
	wavelet.cpp

INCLUDES = \
	-I$(top_srcdir)/libraries \
	-I$(top_srcdir)/external/bilib/headers \
	-I$(top_srcdir)/external/bilib/types \
	-I$(top_srcdir)/external/bilib

LDADD = $(top_srcdir)/external/bilib/libBilib.la

EXTRA_DIST = \
	args.h \
	del_triang.h \
	denoise.h \
	de_solver.h \
	docfile.h \
	error.h \
	fft.h \
	filters.h \
	funcs.h \
	geometry.h \
	header.h \
	histogram.h \
	image.h \
	imagic.h \
	integration.h \
	macros.h \
	make_spectra.h \
	mask.h \
	matrix1d.h \
	matrix2d.h \
	matrix3d.h \
	memory.h \
	micrograph_downsample.h \
	micrograph.h \
	morphology.h \
	multidim_basic2.h \
	multidim_basic3.h \
	multidim_basic.h \
	multidim_common.h \
	multidim_friends_implementation.h \
	normalize.h \
	numerical_recipes.h \
	progs.h \
	projection.h \
	range_adjust.h \
	rotational_spectrum.h \
	selfile.h \
	test_cluster.h \
	tomogram.h \
	types.h \
	vectorial.h \
	volume.h \
	volume_segment.h \
	wavelet.h
