lib_LTLIBRARIES = libXmippLegacy.la

libOldXmipp_la_SOURCES = \
	allfft.cpp \
	autovec.cpp \
	cabecero.cpp \
	cenpar.cpp \
	dimension.cpp \
	fft2d.cpp \
	fft.cpp \
	fftmod.cpp \
	fftn.cpp \
	filtros.cpp \
	floatnat.cpp \
	gaussj.cpp \
	iocabecero.cpp \
	plano.cpp \
	recipe.cpp \
	rutinclus.cpp \
	rutinrot.cpp \
	specmod.cpp \
	usages.cpp \
	varios2.cpp \
	varios3.cpp \
	varios.cpp

INCLUDES = -I$(top_srcdir)/libraries

EXTRA_DIST = \
	fftn.h \
	groe.h \
	sacaf.h \
	spider.h

docs:
