lib_LTLIBRARIES = libXmippLegacy.la

libXmippLegacy_la_SOURCES = \
	allfft.cpp \
	cabecero.cpp \
	dimension.cpp \
	fft.cpp \
	fftmod.cpp \
	fftn.cpp \
	filtros.cpp \
	floatnat.cpp \
	iocabecero.cpp \
	specmod.cpp \
	varios2.cpp \
	varios3.cpp \
	varios.cpp

INCLUDES = -I$(top_srcdir)/libraries

EXTRA_DIST = \
	fftn.h \
	groe.h \
	sacaf.h \
	spider.h

docs:
