#bin_PROGRAMS = adjust_surface
#adjust_surface_SOURCES = adjust_surface.cc
#adjust_surface_LDADD = $(top_srcdir)/Lib/XmippData/libXmippData.so \
#	$(top_srcdir)/Lib/XmippInterface/libXmippInterface.so \
#	$(top_srcdir)/Lib/XmippInterface/libXmippInterfaceVTK.so \
#	$(top_srcdir)/Lib/Reconstruction/libXmippRecons.so \
#	$(top_srcdir)/Lib/Reconstruction/libXmippReconsVTK.so
#INCLUDES = -I$(top_srcdir)/Lib

#ifeq ($(HAVE_INRIA),YES)
#   PROJ = adjust_surface
#endif
#OBJ  = adjust_surface.o
#LIBS = -l$(LIBXMIPP_INTERFACE) -l$(LIBXMIPP_INTERFACE_INRIA) \
#       -l$(LIBRECONS) -l$(LIBRECONS_INRIA) \
#       -l$(LIBXMIPP) -lINRIA
#EXTRA_LIB_DIRS = -L$(XMIPP_INRIADIR)
