bin_PROGRAMS = angular_distance
angular_distance_SOURCES = angular_distance.cc
angular_distance_LDADD = $(top_srcdir)/Lib/Reconstruction/libXmippRecons_@host_os@.la \
	$(top_srcdir)/Lib/XmippInterface/libXmippInterfaceVTK_@host_os@.la \
	$(top_srcdir)/Lib/XmippData/libXmippData_@host_os@.la

INCLUDES = -I$(top_srcdir)/Lib

